--- a/src/entrypoints/popup/index.html
+++ b/src/entrypoints/popup/index.html
@@ -32,6 +32,11 @@
       .scrollbar-thin::-webkit-scrollbar-thumb:hover {
         background: #94a3b8;
       }
+      /* Improved focus styles for better keyboard navigation */
+      button:focus, a:focus {
+        outline: 2px solid #3b82f6;
+        outline-offset: 2px;
+      }
     </style>
   </head>
   <body>
